<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Web2Carz</string>
<string name="category_prompt">Choose Category</string>
<string name="manage_categories">Manage Categories</string>
<string name="category_add_edit">Add/Edit Category</string>
<string name="add_new_category">Add New Category</string>
<string name="select_color">Select Color</string>
<string name="backup_expenses">Backup expenses</string>

    <string name="backup_email_title">Buck Tracker expenses backup</string>
<string name="add_new_expense">Add New Expense</string>
<string name="footer_text">Buck Tracker by AndroMarek</string>
<string name="footer_text_2">Please report bugs and request features: andromarek@gmail.com</string>
<string name="button_enter_your_receipt">Enter your receipt</string>
    <string name="button_manage_categories">Manage categories</string>
    <string name="button_see_all_expenses">See all expenses</string>
    <string name="button_see_charts">See charts</string>
    <string name="slogan">Your local cars</string>


<string name="filter_set">Set Filter</string>
    <string name="filter_clear">Clear Filter</string>
<string name="button_scan_barcode">Scan Barcode</string>
<string name="button_enter_vin">Enter Vin</string>
<string name="button_scan_vin">Scan Vin</string>
</resources>
